# ok-transformer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  M1-installation.sh  M1-tensorflow-install.sh  Makefile  Pipfile  README.md  build-requirements.txt  genindex.html  git-push-all.sh  intro.html  objects.inv  project-features.txt  pushall.sh  pyproject.toml  pytorch-activations.ipynb  pytorch-intro.ipynb  pytorch-optim-init.ipynb  readings.md  requirements-build.txt  requirements.txt  search.html  searchindex.js  snippets.md  tox.ini
.github/workflows/: broken-link-check.yml  build-book.yml  build-jupyter-book.yml  buildbook.yml  publish-book.yml  validate-notebooks.yml
_sources/: intro.md
_sources/nb/dl/: 00-backprop.ipynb  04-lm.ipynb
_sources/nb/mle/: cicd-pipelines.ipynb
_sources/nb/mlops/: 02-package.ipynb
_sources/nb/notes/: benchmarking.ipynb  tf-course.ipynb
data/datasets-for-start/breast_cancer_wisconsin/: data.csv
data/datasets-for-start/spect/: test.csv  train.csv
docs/: _config.yml  _toc.yml  intro.md  references.bib  requirements.txt
docs/.ipynb_checkpoints/: _config-checkpoint.yml  intro-checkpoint.md  references-checkpoint.bib
docs/_build/.doctrees/: environment.pickle  homl-2-house-prices.doctree  intro.doctree  markdown.doctree  notebooks.doctree
docs/_build/html/: .buildinfo  genindex.html  homl-2-house-prices.html  intro.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
docs/_build/jupyter_execute/: homl-2-house-prices.ipynb  homl-2-house-prices.py
docs/_static/: custom.css
docs/deprecated/: 00-datasets.ipynb  01-bigrams.ipynb  05-cnn-models.ipynb  05-rnn.ipynb  05-tensorflow-cnn.ipynb  06-tensorflow-rnn.ipynb  06a-tensorflow-timeseries.ipynb  11-tensorflow-optim-init.ipynb  prefect.ipynb  transfer-learning.ipynb
docs/deprecated/fastapi/: chapter5.ipynb  chapter6.ipynb
docs/deprecated/fundamentals/: missing.ipynb
docs/deprecated/prefect/: requirements.txt  utils.py
docs/drafts/: 01-code.ipynb  06a-tensorflow-timeseries.ipynb  10-tensorflow-activations.ipynb
docs/drafts/fastapi/: chapter3.ipynb  chapter4.ipynb  chapter7.ipynb
docs/drafts/fundamentals/: missing.ipynb  (+1 more)
docs/img/: backward.drawio  batchnorm.drawio  bigram-nn.drawio  char-dataset.drawio  embedding.drawio  fully-connected-backprop.drawio  jacobian.drawio  mlp-char-level.drawio  weight-backprop.drawio
docs/notebooks/: backpropagation.ipynb  blending-stacking.ipynb  docker4ds.ipynb  ensembling-blending-stacking.ipynb  homl-2-house-prices.ipynb  homl-3-classification.ipynb  house-prices.ipynb  hyperopt-optuna-test.ipynb  hyperopt-optuna.ipynb  nearest-neighbors.ipynb  optuna-0.html  optuna-1.html  optuna-10.html  optuna-11.html  optuna-2.html  optuna-3.html  optuna-3.ipynb  optuna-4.html  optuna-5.html  optuna-6.html  optuna-7.html  optuna-8.html  optuna-9.html  optuna.ipynb  pytorch-activation.ipynb  pytorch-activations.ipynb  pytorch-intro.ipynb
docs/notebooks/drafts/fastapi/src/chapter6/: setup.cfg
docs/notebooks/drafts/fastapi/src/chapter6/src/chapter6/sqlalchemy_relationship/alembic/: env.py
docs/notebooks/drafts/fastapi/src/chapter6/src/chapter6/sqlalchemy_relationship/alembic/versions/: c2afd086e322_initial_migration.py
drafts/: 03-tensorflow-estimators.ipynb  cicd-pipelines.ipynb  ts0-basics.ipynb
extras/: frameworks.drawio  init.py  readings.md  run.py  snippets.md  template.ipynb  validate.py
input/: README.md
input/datasets-for-start/: README.md
input/employee_attrition/: HR-Employee-Attrition-test.csv  HR-Employee-Attrition-train.csv
input/occupancy/: README.md
nb/dl/: 00-backprop.html  01-intro.html  02-optim.html  03-cnn.html  04-lm.html  05-training.html  07-attention.html
nb/mle/: cicd-pipelines.html  model-serving-api.html
nb/mlops/: 01-intro.html  02-package.html  03-mlflow.html  04-tasks.html
nb/nn/: 03-batchnorm.html
nb/notes/: benchmarking.html  containers.html  tf-course.html
notebooks/: blending-stacking.ipynb  house-prices.ipynb
package/inefficient_networks/: config.py  demo.ipynb  utils.py
scripts/: config.py  demo.ipynb
src/: MANIFEST.in  demo.ipynb  requirements.txt  setup.py  stacking.py
src/ineff/: __init__.py  config.py  utils.py
src/inefficient_networks/: __init__.py  config.py  demo.ipynb  utils.py
src/inefficient_networks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/requirements/: requirements.txt
(+740 files in other folders)
