
[project]
name = "ok-transformer"
version = "0.1.0"
authors = [
    {name = "particle1331", email = "particle1331@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.2",
    "numpy>=1.26.4",
    "optuna>=3.6.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tensorflow-macos>=2.15.1",
    "tensorflow-metal>=1.1.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchmetrics>=1.4.0.post0",
    "torchinfo>=1.8.0",
    "tqdm>=4.66.4",
    "xgboost>=2.0.3",
    "tensorflow>=2.15.1",
    "tensorflow-datasets>=4.9.6",
    "graphviz>=0.20.3",
    "lightning>=2.3.0",
    "torchvision==0.17.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "ipywidgets>=8.1.3",
    "nbdime>=4.0.1",
    "jupyter-server==2.12.5",
]
