
[project]
name = "ok-transformer"
version = "0.1.0"
authors = [
    {name = "particle1331", email = "particle1331@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.111.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.2",
    "numpy>=1.26.4",
    "optuna>=3.6.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.15.1",
    "tensorflow-datasets>=4.9.6",
    "tensorflow-macos>=2.15.1",
    "tensorflow-metal>=1.1.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "torchmetrics>=1.4.0.post0",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.66.4",
    "xgboost>=2.0.3",
    "graphviz>=0.20.3",
    "lightning>=2.3.0",
    "httpie>=3.2.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "jupyter-server==2.12.5",
    "jupyter-contrib-nbextensions>=0.7.0",
    "ipywidgets>=8.1.3",
    "nbdime>=4.0.1",
    "ruff>=0.4.9",
    "papermill>=2.6.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".tox",
    "__pycache__",
    ".mypy_cache",
    ".venv",
    ".vscode",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["W292"]
ignore = ["E731"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
