[project]
name = "ok-transformer"
version = "0.2.0"
description = "Exploring machine learning engineering and operations. âš"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.111.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.2",
    "numpy>=1.26.4",
    "optuna>=3.6.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.15.1",
    "tensorflow-datasets>=4.9.6",
    "tensorflow-macos>=2.15.1",
    "tensorflow-metal>=1.1.0",
    "torch>=2.6.0",
    "torchvision",
    "torchaudio",
    "torchmetrics>=1.4.0.post0",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.66.4",
    "xgboost>=2.0.3",
    "graphviz>=0.20.3",
    "lightning>=2.3.0",
    "httpie>=3.2.2",
    "mlx>=0.19.0",
    "papermill>=2.6.0",
    "jupyter>=1.1.1",
]

[project.urls]
homepage = "https://particle1331.github.io/ok-transformer"
source = "https://github.com/particle1331/ok-transformer"
