[metadata]
name = chapter6
description = "Chapter 6 of F. Voron's FastAPI book."
author = Ron
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    chapter6
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
